@@ -1,3 +1,8 @@
+2010-11-05  Ramon Novoa  <rnovoa@artica.es>
+
+	* pandora_windows_service.cc: Merged from trunk. Read all secondary
+	  server parameters.
+
 2010-07-06  Ramon Novoa  <rnovoa@artica.es>
 
 	* bin/PandoraAgent.exe: Updated to r2961.
